--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&family=Poppins:wght@500;700&display=swap');
 
 
@@ -47,3 +48,12 @@ h1, h2, h3 {
 .swiper-container:hover .swiper-button-next {
   opacity: 1;
 }
+
+  /* Hide scrollbar but keep functionality */
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
